--- a/Lee_Jonovan_Assignment3/public/product_style.css
+++ b/Lee_Jonovan_Assignment3/public/product_style.css
@@ -9,7 +9,7 @@ h1 {
   padding: 20px;
   margin: 0;
   text-align: center;
-  background: brown;
+  background: white;
   color: black;
   font-size: 50px;
 }
@@ -19,7 +19,7 @@ h2 {
   padding: 20px;
   margin-top: 10%;
   text-align: center;
-  background: brown;
+  background: gray;
 }
 
 h3 {
@@ -27,7 +27,7 @@ h3 {
   padding: 10px;
   margin: 0;
   text-align: center;
-  background: brown;
+  background: gray;
 }
 
 h4 {
@@ -35,7 +35,7 @@ h4 {
   padding: 5px;
   margin: 0;
   text-align: Left;
-  background: brown;
+  background: gray;
   font-size: 16px;
 }
 
@@ -48,7 +48,7 @@ h4 {
 ul {
   list-style-type: none;
   overflow: hidden;
-  background-color: rgb(68, 4, 4);
+  background-color: rgb(155, 35, 27);
   text-align: center;
   font-family: 'Comfortaa', serif;
   font-size: 13px;
